# homesync

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix
.githooks/: pre-commit
examples/: config.yaml  template.yaml
rsrc/: example.yml  template.yml
src/: cli.rs  config.rs  copy.rs  daemon.rs  git.rs  lib.rs  main.rs  path.rs
src/homesync/: config.rs
