[package]
name = "homesync"
authors = ["Joshua Potter <jrpotter.github.io>"]
description = """

Homesync provides a way of automatically syncing config files across various\
applications you may use.
"""
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0-rc.9", features = ["derive"] }
notify = "4.0.16"
serde = "1.0"
serde_derive = "1.0.132"
serde_yaml = "0.8"
yaml-rust = "0.4.4"
