[package]
name = "homesync"
authors = ["Joshua Potter <jrpotter.github.io>"]
description = """

Homesync provides a way of automatically syncing config files across various\
applications you may use.
"""
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "3.0.0-rc.9", features = ["derive"] }
git2 = "0.13.25"
notify = "4.0.16"
regex = "1.5.4"
serde = "1.0"
serde_derive = "1.0.132"
serde_yaml = "0.8"
yaml-rust = "0.4.4"
url = { version = "2.2.2", features = ["serde"] }
