[package]
name = "homesync"
authors = ["Joshua Potter <jrpotter.github.io>"]
description = """

Homesync provides a way of automatically syncing config files across various\
applications you may use.
"""
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0-rc.9", features = ["derive"] }
git2 = "0.13.25"
log = "0.4.14"
notify = "4.0.16"
serde = "1.0"
serde_derive = "1.0.132"
serde_yaml = "0.8"
simplelog = { version = "^0.11.1", features = ["paris"] }
url = { version = "2.2.2", features = ["serde"] }
yaml-rust = "0.4.4"
